# Pickomino

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: python-package.yml
pickomino_env/: pickomino.py
pickomino_env/modules/: action_checker.py  bot.py  constants.py  logging_config.py  play.py  player.py  renderer.py  rule_checker.py  tiles.py
